Squashed 'lib/mdi/' changes from f8055f1..8bba516
8bba516 Update source link in documentation
e496091 Update documentation link
c16a2d2 Update documentation
b667cc0 Rename source directory to MDI_Library

git-subtree-dir: lib/mdi
git-subtree-split: 8bba516baaddb53c625f0854003c2c0b2a6c3d69

--- a/docs/doxygen_source/mainpage.dox
+++ b/docs/doxygen_source/mainpage.dox
@@ -8,7 +8,7 @@ The MolSSI Driver Interface (MDI) library enables codes to interoperate via the 
 
 \section source_sec Source Code
 
-The source code of the MDI library is available at GitHub at https://github.com/MolSSI/molssi_driver_interface
+The source code of the MDI library is available at GitHub at https://github.com/MolSSI/MDI_Library
 
 \section commands_sec MDI Standard
 
